--- a/Pages/Account/login.html
+++ b/Pages/Account/login.html
@@ -5,29 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #f8f9fa;
-        }
-        .navbar-brand {
-            font-weight: bold;
-        }
-        .login-form {
-            background-color: #ffffff;
-            border-radius: 10px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-            padding: 30px;
-            margin-top: 50px;
-        }
-        .btn-login {
-            background-color: #0d6efd;
-            border-color: #0d6efd;
-        }
-        .btn-login:hover {
-            background-color: #0b5ed7;
-            border-color: #0b5ed7;
-        }
-    </style>
+    <link rel="stylesheet" href="../../Assets/CSS/login.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -45,33 +23,12 @@
                         <a class="nav-link" href="../RequestShipment/request-shipment.html">Request Shipment</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Track Shipment</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Services
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Domestic Shipping</a></li>
-                            <li><a class="dropdown-item" href="#">International Shipping</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Bulk Orders</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" tabindex="-1">Contact</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="#" tabindex="-1">Login</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../Account/register.html" tabindex="-1">Register</a>
                     </li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Track your package" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Track</button>
-                </form>
             </div>
         </div>
     </nav>
