--- a/Pages/Home/home.html
+++ b/Pages/Home/home.html
@@ -6,12 +6,6 @@
     <title>ShipOnline System - Home Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        body {
-            background-color: #f8f9fa;
-        }
-        .navbar-brand {
-            font-weight: bold;
-        }
         .hero {
             background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/api/placeholder/1200/400');
             background-size: cover;
@@ -41,33 +35,15 @@
                         <a class="nav-link" href="../RequestShipment/request-shipment.html">Request Shipment</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Track Shipment</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Services
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Domestic Shipping</a></li>
-                            <li><a class="dropdown-item" href="#">International Shipping</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Bulk Orders</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" tabindex="-1">Contact</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="../Account/login.html" tabindex="-1">Login</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../Account/register.html" tabindex="-1">Register</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../Admin/admin.html" tabindex="-1">Admin</a>
+                    </li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Track your package" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Track</button>
-                </form>
             </div>
         </div>
     </nav>
