--- a/Pages/Admin/admin.html
+++ b/Pages/Admin/admin.html
@@ -6,23 +6,7 @@
     <title>ShipOnline System - Administration</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
-    <style>
-        .admin-panel {
-            background-color: #ffffff;
-            border-radius: 10px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-            padding: 30px;
-            margin-top: 50px;
-        }
-        .btn-show {
-            background-color: #0d6efd;
-            border-color: #0d6efd;
-        }
-        .btn-show:hover {
-            background-color: #0b5ed7;
-            border-color: #0b5ed7;
-        }
-    </style>
+    <link rel="stylesheet" href="../../Assets/CSS/admin.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
