--- a/Pages/RequestShipment/pre-request-shipment.html
+++ b/Pages/RequestShipment/pre-request-shipment.html
@@ -6,29 +6,7 @@
     <title>Welcome to ShipOnline - Start Your Shipment</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
-    <style>
-        .welcome-section {
-            background-color: #ffffff;
-            border-radius: 10px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-            padding: 30px;
-            margin-top: 50px;
-        }
-        .feature-icon {
-            font-size: 2rem;
-            color: #0d6efd;
-        }
-        .btn-start-shipment {
-            background-color: #0d6efd;
-            border-color: #0d6efd;
-            padding: 10px 20px;
-            font-size: 1.2rem;
-        }
-        .btn-start-shipment:hover {
-            background-color: #0b5ed7;
-            border-color: #0b5ed7;
-        }
-    </style>
+    <link rel="stylesheet" href="../../Assets/CSS/pre-request.shipment.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -40,7 +18,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link" href="../Home/shiponline.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Dashboard</a>
@@ -89,7 +67,7 @@
                     </div>
                     
                     <div class="text-center">
-                        <a href="request.php" class="btn btn-primary btn-lg btn-start-shipment">
+                        <a href="request.php" class="btn btn-primary btn-lg">
                             <i class="bi bi-box-seam me-2"></i>Start Your Shipment
                         </a>
                     </div>
