--- a/Pages/RequestShipment/request-shipment.html
+++ b/Pages/RequestShipment/request-shipment.html
@@ -5,16 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ShipOnline System - Shipping Request</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .shipping-form {
-            background-color: #ffffff;
-            border-radius: 10px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-            padding: 30px;
-            margin-top: 50px;
-            margin-bottom: 50px;
-        }
-    </style>
+    <link rel="stylesheet" href="../../Assets/CSS/request-shipment.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
