dropdown modification added

--- a/Pages/RequestShipment/request-shipment.html
+++ b/Pages/RequestShipment/request-shipment.html
@@ -43,10 +43,25 @@
                                 <label for="weight" class="form-label">Weight</label>
                                 <select class="form-select" id="weight" required>
                                     <option value="">Select Weight</option>
-                                    <option value="1">0-1 kg</option>
-                                    <option value="2">1-5 kg</option>
-                                    <option value="3">5-10 kg</option>
-                                    <option value="4">10+ kg</option>
+                                    <option value="2">0-2 kg</option>
+                                    <option value="3">3 kg</option>
+                                    <option value="4">4 kg</option>
+                                    <option value="5">5 kg</option>
+                                    <option value="6">6 kg</option>
+                                    <option value="7">7 kg</option>
+                                    <option value="8">8 kg</option>
+                                    <option value="9">9 kg</option>
+                                    <option value="10">10 kg</option>
+                                    <option value="11">11 kg</option>
+                                    <option value="12">12 kg</option>
+                                    <option value="13">13 kg</option>
+                                    <option value="14">14 kg</option>
+                                    <option value="15">15 kg</option>
+                                    <option value="16">16 kg</option>
+                                    <option value="17">17 kg</option>
+                                    <option value="18">18 kg</option>
+                                    <option value="19">19 kg</option>
+                                    <option value="20">20 kg</option>
                                 </select>
                             </div>
                         </div>
